samples/_failures_safe/1761656673_2248de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f78849b.c: In function ‘main’:
./samples/SAFE/__tmp_0f78849b.c:153:5: error: expected expression at end of input
  153 |     int choice = read_int("Select operation (1-3): ", 1,
      |     ^~~
./samples/SAFE/__tmp_0f78849b.c:153:5: error: expected declaration or statement at end of input
